unpackaged/main/default/objects/AcctSeed__Financial_Cube_Transaction__c/fields/AcctSeed__Product__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Product__c</fullName>
    <formula>AcctSeed__Transaction__r.AcctSeed__Product__r.Name</formula>
    <label>Product</label>
    <type>Text</type>
</CustomField>