unpackaged/main/default/objects/AcctSeed__Financial_Cube_Transaction__c/fields/AcctSeed__Project__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Project__c</fullName>
    <formula>AcctSeed__Transaction__r.AcctSeed__Project__r.Name</formula>
    <label>Project</label>
    <type>Text</type>
</CustomField>