unpackaged/main/default/objects/AcctSeed__Financial_Cube_Transaction__c/fields/AcctSeed__Project_Task__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Project_Task__c</fullName>
    <formula>AcctSeed__Transaction__r.AcctSeed__Project_Task__r.Name</formula>
    <label>Project Task</label>
    <type>Text</type>
</CustomField>