unpackaged/main/default/objects/AcctSeed__Financial_Cube_Transaction__c/fields/AcctSeed__Source__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Source__c</fullName>
    <formula>IF(NOT(ISBLANK(AcctSeed__Transaction__r.AcctSeed__AP_Disbursement__c)), "AP Disbursement",
IF(NOT(ISBLANK(AcctSeed__Transaction__r.AcctSeed__Billing_Cash_Receipt__c)), "Billing Cash Receipt",
IF(NOT(ISBLANK(AcctSeed__Transaction__r.AcctSeed__Billing__c)), "Billing",
IF(NOT(ISBLANK(AcctSeed__Transaction__r.AcctSeed__Billing_Line__c)), "Billing Line",
IF(NOT(ISBLANK(AcctSeed__Transaction__r.AcctSeed__Account_Payable__c)), "Payable",
IF(NOT(ISBLANK(AcctSeed__Transaction__r.AcctSeed__Account_Payable_Line__c)), "Payable Line",
IF(NOT(ISBLANK(AcctSeed__Transaction__r.AcctSeed__Cash_Disbursement__c)), "Cash Disbursement",
IF(NOT(ISBLANK(AcctSeed__Transaction__r.AcctSeed__Cash_Receipt__c)), "Cash Receipt",
IF(NOT(ISBLANK(AcctSeed__Transaction__r.AcctSeed__Scheduled_Revenue_Expense__c)), "Amortization Entry",
IF(NOT(ISBLANK(AcctSeed__Transaction__r.AcctSeed__Time_Card_Day__c)), "Time Card",
IF(NOT(ISBLANK(AcctSeed__Transaction__r.AcctSeed__Journal_Entry_Line__c)), "Journal Entry",
"")))))))))))</formula>
    <label>Source</label>
    <type>Text</type>
</CustomField>